--- a/app/src/main/res/layout/activity_states.xml
+++ b/app/src/main/res/layout/activity_states.xml
@@ -60,7 +60,7 @@
         android:layout_width="33dp"
         android:layout_height="47dp"
         android:layout_marginBottom="412dp"
-        android:background="#ffffff"
+        android:background="@null"
         android:onClick="jandk"
         android:text="saa"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
@@ -69,11 +69,76 @@
         app:layout_constraintStart_toStartOf="@+id/imageView2" />
 
     <Button
+        android:id="@+id/button5"
+        android:layout_width="33dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="312dp"
+        android:background="@null"
+        android:onClick="jandk"
+        android:text="saa"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.179"
+        app:layout_constraintStart_toStartOf="@+id/imageView2" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="33dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="296dp"
+        android:background="@null"
+        android:onClick="jandk"
+        android:text="saa"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.113"
+        app:layout_constraintStart_toStartOf="@+id/imageView2" />
+
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="26dp"
+        android:layout_height="31dp"
+        android:layout_marginBottom="280dp"
+        android:background="@null"
+        android:onClick="jandk"
+        android:text="saa"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.195"
+        app:layout_constraintStart_toStartOf="@+id/imageView2" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="26dp"
+        android:layout_height="31dp"
+        android:layout_marginBottom="304dp"
+        android:background="@null"
+        android:onClick="jandk"
+        android:text="saa"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.256"
+        app:layout_constraintStart_toStartOf="@+id/imageView2" />
+
+    <Button
+        android:id="@+id/button11"
+        android:layout_width="26dp"
+        android:layout_height="31dp"
+        android:layout_marginBottom="320dp"
+        android:background="@null"
+        android:onClick="jandk"
+        android:text="saa"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.256"
+        app:layout_constraintStart_toStartOf="@+id/imageView2" />
+
+    <Button
         android:id="@+id/button3"
         android:layout_width="33dp"
         android:layout_height="47dp"
         android:layout_marginBottom="428dp"
-        android:background="@android:color/holo_red_dark"
+        android:background="@null"
         android:onClick="jandk"
         android:text="saa"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
@@ -86,7 +151,7 @@
         android:layout_width="33dp"
         android:layout_height="47dp"
         android:layout_marginBottom="412dp"
-        android:background="@android:color/holo_red_dark"
+        android:background="@null"
         android:onClick="jandk"
         android:text="saa"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
