--- a/app/src/main/res/layout/activity_states.xml
+++ b/app/src/main/res/layout/activity_states.xml
@@ -74,7 +74,7 @@
         android:layout_height="47dp"
         android:layout_marginBottom="312dp"
         android:background="@null"
-        android:onClick="jandk"
+        android:onClick="rajasthan"
         android:text="saa"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
@@ -87,7 +87,7 @@
         android:layout_height="47dp"
         android:layout_marginBottom="296dp"
         android:background="@null"
-        android:onClick="jandk"
+        android:onClick="rajasthan"
         android:text="saa"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
@@ -100,7 +100,7 @@
         android:layout_height="31dp"
         android:layout_marginBottom="280dp"
         android:background="@null"
-        android:onClick="jandk"
+        android:onClick="rajasthan"
         android:text="saa"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
@@ -113,7 +113,7 @@
         android:layout_height="31dp"
         android:layout_marginBottom="304dp"
         android:background="@null"
-        android:onClick="jandk"
+        android:onClick="rajasthan"
         android:text="saa"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
@@ -126,7 +126,7 @@
         android:layout_height="31dp"
         android:layout_marginBottom="320dp"
         android:background="@null"
-        android:onClick="jandk"
+        android:onClick="rajasthan"
         android:text="saa"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
