--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -8,78 +8,16 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="191dp"
-        android:layout_height="wrap_content"
+        android:layout_width="257dp"
+        android:layout_height="175dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="53dp"
-        android:layout_marginTop="224dp"
-        android:layout_marginEnd="166dp"
-        android:layout_marginBottom="459dp"
-        android:background="@null"
+        android:layout_marginStart="77dp"
+        android:layout_marginTop="124dp"
+        android:layout_marginEnd="77dp"
+        android:layout_marginBottom="432dp"
         android:onClick="weather"
-        android:text="fdsad"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.138" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp"
-        app:srcCompat="@mipmap/we" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="191dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="185dp"
-        android:layout_marginTop="402dp"
-        android:layout_marginEnd="34dp"
-        android:layout_marginBottom="281dp"
-        android:background="@null"
-        android:text="rrrrrrrrrrrrrrrrr\"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.138" />
-
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="191dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="164dp"
-        android:layout_marginTop="627dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginBottom="56dp"
-        android:background="@null"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.138" />
-
+        android:text="Button" />
 </RelativeLayout>
