--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -8,16 +8,63 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="257dp"
-        android:layout_height="175dp"
+        android:layout_width="244dp"
+        android:layout_height="108dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="77dp"
-        android:layout_marginTop="124dp"
-        android:layout_marginEnd="77dp"
-        android:layout_marginBottom="432dp"
+        android:layout_marginStart="53dp"
+        android:layout_marginTop="215dp"
+        android:layout_marginEnd="114dp"
+        android:layout_marginBottom="408dp"
+        android:background="@null"
         android:onClick="weather"
         android:text="Button" />
+
+    <Button
+        android:id="@+id/button15"
+        android:layout_width="244dp"
+        android:layout_height="108dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="142dp"
+        android:layout_marginTop="580dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="41dp"
+        android:background="@null"
+        android:onClick="market"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/button16"
+        android:layout_width="244dp"
+        android:layout_height="108dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="378dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="244dp"
+        android:background="@null"
+        android:onClick="weather"
+        android:text="Button" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        app:srcCompat="@mipmap/we" />
 </RelativeLayout>
