--- a/app/src/main/res/layout/activity_visualization.xml
+++ b/app/src/main/res/layout/activity_visualization.xml
@@ -43,11 +43,11 @@
         android:layout_width="354dp"
         android:layout_height="177dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="504dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="76dp"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
