--- a/app/src/main/res/layout/activity_states.xml
+++ b/app/src/main/res/layout/activity_states.xml
@@ -62,7 +62,8 @@
         android:layout_marginBottom="412dp"
         android:background="@null"
         android:onClick="jandk"
-        android:text="saa"
+        android:text="JK"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.273"
@@ -75,7 +76,6 @@
         android:layout_marginBottom="312dp"
         android:background="@null"
         android:onClick="rajasthan"
-        android:text="saa"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.179"
@@ -88,10 +88,93 @@
         android:layout_marginBottom="296dp"
         android:background="@null"
         android:onClick="rajasthan"
-        android:text="saa"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.113"
+        app:layout_constraintStart_toStartOf="@+id/imageView2" />
+
+    <Button
+        android:id="@+id/button13"
+        android:layout_width="33dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="304dp"
+        android:background="@null"
+        android:onClick="up"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.43"
+        app:layout_constraintStart_toStartOf="@+id/imageView2" />
+
+    <Button
+        android:id="@+id/button14"
+        android:layout_width="22dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="332dp"
+        android:background="@null"
+        android:onClick="up"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.356"
+        app:layout_constraintStart_toStartOf="@+id/imageView2" />
+
+    <Button
+        android:id="@+id/button17"
+        android:layout_width="22dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="296dp"
+        android:background="@null"
+        android:onClick="up"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="@+id/imageView2" />
+
+    <Button
+        android:id="@+id/button19"
+        android:layout_width="26dp"
+        android:layout_height="41dp"
+        android:layout_marginBottom="312dp"
+        android:background="@null"
+        android:onClick="up"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.395"
+        app:layout_constraintStart_toStartOf="@+id/imageView2" />
+
+    <Button
+        android:id="@+id/button21"
+        android:layout_width="84dp"
+        android:layout_height="28dp"
+        android:layout_marginBottom="260dp"
+        android:background="@null"
+        android:onClick="madhya"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.28"
+        app:layout_constraintStart_toStartOf="@+id/imageView2" />
+
+    <Button
+        android:id="@+id/button22"
+        android:layout_width="52dp"
+        android:layout_height="34dp"
+        android:layout_marginBottom="268dp"
+        android:background="@null"
+        android:onClick="madhya"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.388"
+        app:layout_constraintStart_toStartOf="@+id/imageView2" />
+
+    <Button
+        android:id="@+id/button23"
+        android:layout_width="33dp"
+        android:layout_height="62dp"
+        android:layout_marginBottom="260dp"
+        android:background="@null"
+        android:onClick="madhya"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.31"
         app:layout_constraintStart_toStartOf="@+id/imageView2" />
 
     <Button
@@ -101,7 +184,6 @@
         android:layout_marginBottom="280dp"
         android:background="@null"
         android:onClick="rajasthan"
-        android:text="saa"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.195"
@@ -114,7 +196,6 @@
         android:layout_marginBottom="304dp"
         android:background="@null"
         android:onClick="rajasthan"
-        android:text="saa"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.256"
@@ -127,7 +208,6 @@
         android:layout_marginBottom="320dp"
         android:background="@null"
         android:onClick="rajasthan"
-        android:text="saa"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.256"
@@ -140,7 +220,6 @@
         android:layout_marginBottom="428dp"
         android:background="@null"
         android:onClick="jandk"
-        android:text="saa"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.207"
@@ -153,9 +232,47 @@
         android:layout_marginBottom="412dp"
         android:background="@null"
         android:onClick="jandk"
-        android:text="saa"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.336"
         app:layout_constraintStart_toStartOf="@+id/imageView2" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="284dp"
+        android:layout_marginBottom="312dp"
+        android:text="Rajasthan"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="196dp"
+        android:layout_marginBottom="316dp"
+        android:text="Uttar\nPradesh"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="232dp"
+        android:layout_marginBottom="264dp"
+        android:text="Madhya\nPradesh"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
