--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -68,16 +68,38 @@
 
     <TextView
         android:id="@+id/temp"
+        android:layout_width="251dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="71dp"
+        android:layout_marginTop="49dp"
+        android:layout_marginEnd="89dp"
+        android:layout_marginBottom="548dp"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.287" />
+
+    <TextView
+        android:id="@+id/temp2"
         android:layout_width="wrap_content"
         android:layout_height="134dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="99dp"
-        android:layout_marginTop="49dp"
-        android:layout_marginEnd="98dp"
-        android:layout_marginBottom="548dp"
+        android:layout_marginStart="94dp"
+        android:layout_marginTop="95dp"
+        android:layout_marginEnd="103dp"
+        android:layout_marginBottom="502dp"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="25sp"
